<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/background"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:orientation="vertical"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/maintile"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
               android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_profile"
                android:gravity="center"
                android:text="@string/visitMe"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="50dp"
                android:text="@string/title"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/paragraph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/paragraph"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/btnExplore"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_margin="50dp"
                android:background="@drawable/bg_buttonexplore"
                android:gravity="center"
                android:text="@string/explore"
                android:textColor="@color/green"
                android:layout_gravity="center"/>
        </LinearLayout>

    </RelativeLayout>


</LinearLayout>